<resources>
    <string name="app_name">appPerongsok</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alamat">Alamat:</string>
    <string name="deskripsi">Deskripsi disini</string>
    <string name="judul">Judul</string>
    <string name="nama">Nama</string>
    <string name="last_seen">20 min</string>
    <string name="alamat_disini">Alamat disini</string>
</resources>