<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/uPictureIv"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_face_custom" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/uNameTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/pTimeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_seen"/>

            </LinearLayout>

<!--            <ImageButton-->
<!--                android:id="@+id/moreBtn"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="@null"-->
<!--                android:src="@drawable/ic_more_black"/>-->

        </LinearLayout>

        <TextView
            android:id="@+id/pTitleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/judul"
            android:autoLink="all"/>

        <TextView
            android:id="@+id/pDescriptionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/deskripsi"
            android:autoLink="all"/>
        <ImageView
            android:id="@+id/pImageIvPost"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:src="@android:color/holo_blue_dark"
            android:background="@android:color/white"
            android:contentDescription="image post" />

      <TextView
            android:text="@string/alamat"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:autoLink="all"/>
        <TextView
            android:id="@+id/pAddressTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/alamat_disini"
            android:layout_marginBottom="5dp"
            android:autoLink="all"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#F5F0F0"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>